--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
       src="https://cdn.plot.ly/plotly-3.0.1.min.js"
       charset="utf-8"
     ></script>
+    <script src="https://unpkg.com/d3-interpolate-path/build/d3-interpolate-path.min.js"></script>
 
     <!-- Application Scripts -->
     <script src="js/steps-config.js"></script>
