tried a title thing...

--- a/index.html
+++ b/index.html
@@ -17,9 +17,14 @@
     <main>
       <!-- Hero section with full viewport image -->
       <section id="hero">
-        <div class="title top-left">Fear.</div>
-        <div class="title center">Read.</div>
-        <div class="title bottom-right">Repeat.</div>
+        <canvas id="physics-canvas"></canvas>
+        <div class="hero-ladder">
+          <div class="ladder-step andale">THE</div>
+          <div class="ladder-step andale">PROBLEM</div>
+          <div class="ladder-step andale">WITH</div>
+          <div class="ladder-step andale">FIXING</div>
+          <div class="ladder-step yourself">YOURSELF</div>
+        </div>
         <div class="body bottom-left">
           By me, <a href="https://joshstrupp.com" target="_blank">Josh</a>.
         </div>
@@ -61,6 +66,7 @@
     <script src="https://unpkg.com/d3-interpolate-path/build/d3-interpolate-path.min.js"></script>
 
     <!-- Application Scripts -->
+    <script src="js/physics.js"></script>
     <script src="js/steps-config.js"></script>
     <script src="js/scrolly-utils.js"></script>
     <script src="js/chapter-1-dev-b.js"></script>
