--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
         <canvas id="background-canvas"></canvas>
         <canvas id="physics-canvas"></canvas>
         <div class="hero-ladder">
-          <div class="ladder-step andale">THE</div>
-          <div class="ladder-step andale">PROBLEM</div>
-          <div class="ladder-step andale">WITH</div>
-          <div class="ladder-step andale">FIXING</div>
-          <div class="ladder-step yourself">YOURSELF</div>
+          <div class="ladder-step">The</div>
+          <div class="ladder-step">problem</div>
+          <div class="ladder-step">with</div>
+          <div class="ladder-step">fixing</div>
+          <div class="ladder-step">yourself</div>
         </div>
         <div class="body bottom-left andale">
           BY ME, <a href="https://joshstrupp.com" target="_blank">JOSH</a>.
