started fix scroll up issue

--- a/index.html
+++ b/index.html
@@ -70,9 +70,12 @@
     <script src="js/background-animation.js"></script>
     <script src="js/physics.js"></script>
     <script src="js/cursor-trail.js"></script>
+    <script src="js/visualization-manager.js"></script>
     <script src="js/steps-config.js"></script>
     <script src="js/scrolly-utils.js"></script>
     <script src="js/chapter-1-dev-b.js"></script>
     <script src="js/main.js"></script>
+    <script src="debug-overlay.js"></script>
+    <script src="navigation-helper.js"></script>
   </body>
 </html>
